fixed issue where mobile view was stretched by hidden div

--- a/styles.css
+++ b/styles.css
@@ -34,8 +34,8 @@ a {
 }
 
 .pic {
-  height: 100%;
-  width: 100%;
+    height: 100%;
+    width: 100%;
 }
 
 .linklt {
@@ -103,6 +103,11 @@ a {
 
     #right {
         visibility: hidden;
+    }
+
+    #image-box {
+        width: 0px;
+        height: 0px;
     }
 
     .picture {
